examples/kubernetes-tilt-dev/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-tilt-dev-example
  labels:
    name: k8s-tilt-dev-example
