examples/kubernetes-tilt-dev/k8s/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-tilt-dev-example-namespace
