examples/kubernetes-tilt-dev/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-tilt-dev-example-vite-react-app-service
                port:
                  number: 4000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: k8s-tilt-dev-example-node-nestjs-api-service
                port:
                  number: 3000
